# InpresPFM

./: .gitignore  README.md  build.sh
BoatApp/: .gitignore
BoatApp/app/: build.gradle
BoatApp/app/src/main/: AndroidManifest.xml
account_server_salaties_client/: build.gradle  settings.gradle
accounting_client/: build.gradle
accounting_client/src/main/resources/: Accounting.fxml  Login.fxml
accounting_db/: build.gradle  creation.sql  creation_pg.sql  creation_user.sql
accounting_server/: build.gradle  generate_keystore.sh  settings.gradle
accounting_server_salaries/: build.gradle
bd-traffic/: creation.sql  creation_user.sql
boat_server/: build.gradle
boomap/: settings.gradle
chamap/: build.gradle
chat_client_java/: build.gradle
chat_client_java/src/main/resources/: chat.fxml  login.fxml  style.css
chat_server/: build.gradle
container_server/: CMakeLists.txt  client.cpp  client_test.cpp  client_test.cpp.cpp  main.cpp  parc_debugger.cpp  server.cpp
container_server/data/: users.csv
container_server/headers/: Container.hpp  ContainerServer.hpp  ParcLocation.hpp  ParkLocation.hpp  SelectorThread.hpp
container_server/headers/admin/: Admin.hpp  UrgencyServer.hpp
container_server/headers/client/: ContainerClient.hpp
container_server/headers/cmmp/: CMMPTranslator.hpp  InputDonePacket.hpp  InputDoneResponsePacket.hpp  InputTruckPacket.hpp  InputTruckResponsePacket.hpp  LoginPacket.hpp  LoginResponsePacket.hpp  LogoutPacket.hpp  LogoutResponsePacket.hpp  OutputDonePacket.hpp  OutputDoneResponsePacket.hpp  OutputOnePacket.hpp  OutputOneResponsePacket.hpp  OutputReaderPacket.hpp  OutputReadyPacket.hpp  OutputReadyResponsePacket.hpp  PacketId.hpp  Translator.hpp
container_server/headers/csa/: ListPacket.hpp  ListResponsePacket.hpp  LoginPacket.hpp  LoginResponsePacket.hpp  PacketId.hpp  PausePacket.hpp  PauseResponsePacket.hpp  StopPacket.hpp  StopResponsePacket.hpp  Translator.hpp
container_server/headers/net/: Socket.hpp
container_server/headers/server/: ContainerServer.hpp
container_server/src/: Container.cpp  ContainerServer.cpp  ParcLocation.cpp  ParkLocation.cpp
container_server/src/admin/: Admin.cpp  UrgencyServer.cpp
container_server/src/client/: ContainerClient.cpp
container_server/src/cmmp/: CMMPTranslator.cpp  InputDonePacket.cpp  InputDoneResponsePacket.cpp  InputTruckPacket.cpp  InputTruckResponsePacket.cpp  LoginPacket.cpp  LoginResponsePacket.cpp  LogoutPacket.cpp  LogoutResponsePacket.cpp  OutputDonePacket.cpp  OutputDoneResponsePacket.cpp  OutputOnePacket.cpp  OutputOneResponsePacket.cpp  OutputReadyPacket.cpp  OutputReadyResponsePacket.cpp  Translator.cpp
container_server/src/csa/: ListResponsePacket.cpp  LoginPacket.cpp  Translator.cpp
container_server/src/net/: Socket.cpp
container_server/src/server/: ContainerServer.cpp
container_server_admin/: build.gradle
container_server_admin/src/main/resources/: admin.fxml  login.fxml
corn_analysis/: build.gradle  mais.txt
corn_analysis/src/main/resources/: Display.fxml
cpp-commons/: CMakeLists.txt
cpp-commons/headers/input/: InputHelper.hpp
cpp-commons/headers/io/: BinaryFile.hpp  CSVFile.hpp  StreamUtils.hpp
cpp-commons/headers/net/: IOError.hpp  Selector.hpp  SelectorThread.hpp  Socket.hpp
cpp-commons/headers/protocol/: Packet.hpp  ProtocolError.hpp  ProtocolHandler.hpp  Translator.hpp
cpp-commons/headers/threading/: ThreadPool.hpp
cpp-commons/headers/utils/: CSVFile.hpp  Logger.hpp  ProgramProperties.hpp  Sanity.hpp  StringUtils.hpp
cpp-commons/src/input/: InputHelper.cpp
cpp-commons/src/io/: CSVFile.cpp  StreamUtils.cpp
cpp-commons/src/net/: Selector.cpp  Socket.cpp
cpp-commons/src/threading/: ThreadPool.cpp
cpp-commons/src/utils/: CSVFile.cpp  Logger.cpp  ProgramProperties.cpp  Sanity.cpp  StringUtils.cpp
data_analysis_application/: build.gradle
data_analysis_application/src/main/resources/: DataAnalysisApplication.fxml  login.fxml  style.css
data_analysis_server/: build.gradle
decisiondb/: creation.sql  creation_pg.sql  creation_user.sql
demo_jdbc/: build.gradle
hobbyWebApp/: common.gradle  settings.gradle
hobby_Web_Applic/: build.xml
hobby_Web_Applic/hobbycert/: .rnd  ServerJsse.csr  ca.key  clientJsse.csr  clientJsse.der  serverJsse.der
hobby_Web_Applic/hobbycert/demoCA/: cacert.pem  index.txt  index.txt.old
hobby_Web_Applic/hobbycert/demoCA/newcerts/: 01.pem  02.pem  03.pem
hobby_Web_Applic/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
hobby_Web_Applic/src/java/bundles/: HobbyStrings_en_UK.properties  HobbyStrings_fr_FR.properties
hobby_Web_Applic/src/java/servlets/: LoginServlet.java  ShopServlet.java
hobby_Web_Applic/src/java/tags/: DateTimeTag.java  DisplayCart.java  DisplayReservation.java  LanguagesTag.java
hobby_Web_Applic/web/: JSPCart.jsp  JSPInit.jsp  JSPLanguage.jsp  JSPParcReservation.jsp  JSPPay.jsp  JSPShop.jsp  index.html  registration.html
hobby_Web_Applic/web/WEB-INF/: web.xml
hobby_Web_Applic/web/WEB-INF/tlds/: hobby_tag_library.tld
hobbydb/: build.gradle  creation.sql  creation_user.sql
iobrep/: build.gradle
java-commons/: build.gradle  settings.gradle
mail/: build.gradle
mail/src/main/resources/: Compose.fxml  Mail.fxml  style.css
pfmcop/: build.gradle
pidep/: build.gradle  settings.gradle
reservation_app/: build.gradle
reservation_servlet/: build.gradle
reservation_servlet/src/main/webapp/: Reservation.jsp  login.html
shopdb/: creation.sql  creation_user.sql  inserts.sql
traffic_application/: build.gradle  settings.gradle
traffic_application/src/main/resources/: InputTruckNoRes.fxml  InputTruckRes.fxml  (+6 more)
traffic_server/: build.gradle
trafficdb/: build.gradle  creation.sql  creation_pg.sql  creation_user.sql  inserts.sql  inserts_pg.sql
tramap/: build.gradle
userWebLibs/: build.xml  client_keystore  server_keystore
userWebLibs/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
userWebLibs/src/applet/: LoginApplet.form  LoginApplet.java  RegistrationApplet.form  RegistrationApplet.java
(+310 files in other folders)
